--- a/README.Rmd
+++ b/README.Rmd
@@ -14,12 +14,12 @@ knitr::opts_chunk$set(
 options(knitr.kable.NA = '')
 ```
 
-### Web Scrapping y acceso a datos desde la web
+### Web Scraping y acceso a datos desde la web
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-Este repositorio contiene el material del curso Web Scrapping y acceso a datos desde la web, 
+Este repositorio contiene el material del curso Web Scraping y acceso a datos desde la web, 
 dictado el primer semestre de 2022 por el Departamento de Sociología de la Universidad Católica de Chile a estudiantes de educación continua como parte del [`Diplomado en WebScraping y visualización de datos sociales en R`][dip_R]. 
 
 El programa de este curso se encuentra [`acá`](files/01-programa.pdf).
