--- a/slides/class_2/class_2.Rmd
+++ b/slides/class_2/class_2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Trabajo con listas y expresiones regulares"
+title: "Clase 2: Trabajo con listas y expresiones regulares"
 subtitle: "Web Scraping y acceso a datos desde la web con R"
 author: "<br>Cristián Ayala<br> Director DESUC"
 date: "[github.com/caayala](https://github.com/caayala)"
