--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ calendario |>
 #### Evaluaciones 
 
 - Control 1 (20%): Captura de página web. [Instrucciones](./homework/c_1)
-- Control 2 (20%): 
+- Control 2 (20%): Captura datos de cine chileno. [Instrucciones](./homework/c_2)
 - Control 3 (20%):
 
 - Trabajo Final (40%): 
