--- a/README.Rmd
+++ b/README.Rmd
@@ -47,8 +47,8 @@ calendario |>
 
 #### Evaluaciones 
 
-- Control 1 (20%): Captura de página web. [Instrucciones](./homework/c_1)
-- Control 2 (20%): Captura datos de cine chileno. [Instrucciones](./homework/c_2)
+- Control 1 (20%): Captura de página web. [Instrucciones](./homework/c_1). [Respuesta](./homework/c_1_answers.pdf)
+- Control 2 (20%): Captura datos de cine chileno. [Instrucciones](./homework/c_2). [Respuesta](./homework/c_2_answers.pdf)
 - Control 3 (20%):
 
 - Trabajo Final (40%): 
