--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ calendario |>
 
 - Control 1 (20%): Captura de página web. [Instrucciones](./homework/c_1). [Respuesta](./homework/c_1_answers.pdf)
 - Control 2 (20%): Captura datos de cine chileno. [Instrucciones](./homework/c_2). [Respuesta](./homework/c_2_answers.pdf)
-- Control 3 (20%): Análisis de canciones. [Instrucciones](./homework/c_3).
+- Control 3 (20%): Análisis de canciones. [Instrucciones](./homework/c_3). [Respuesta](./homework/c_3_answers.pdf)
 
 - Trabajo Final (40%): 
 
